--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --env.mode development",
     "build": "webpack --env.mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -27,6 +29,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^6.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "gh-pages": "^3.1.0",
     "handlebars": "^4.7.6",
     "handlebars-loader": "^1.7.1",
     "html-loader": "^1.1.0",
