--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --env.mode development",
+    "server": "json-server --watch server/db.json --delay 500",
     "build": "webpack --env.mode production",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
@@ -40,6 +41,9 @@
     "webpackbar": "^3.2.0"
   },
   "dependencies": {
-    "handlebars": "^4.1.2"
+    "axios": "^0.19.2",
+    "handlebars": "^4.1.2",
+    "json-server": "^0.16.1",
+    "toastr": "^2.1.4"
   }
 }
